// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConnectionStatus /> matches snapshot while loading 1`] = `
<div>
  <div
    class="container"
    data-testid="connection-status"
  >
    <span>
      Connecting
    </span>
  </div>
</div>
`;

exports[`<ConnectionStatus /> matches snapshot with status active 1`] = `
<div>
  <div
    class="container"
    data-testid="connection-status"
  >
    <span
      class="connected material-icons"
      data-testid="icon-wifi"
    >
      wifi
    </span>
    <span>
      Connected
    </span>
  </div>
</div>
`;

exports[`<ConnectionStatus /> matches snapshot with status unknown 1`] = `
<div>
  <div
    class="container"
    data-testid="connection-status"
  >
    <span
      class="disconnected material-icons"
      data-testid="icon-error_outline"
    >
      error_outline
    </span>
    <span>
      Error connecting
    </span>
  </div>
</div>
`;
